[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/ui/Menu_Dialogue.gd" type="Script" id=2]
[ext_resource path="res://default_assets/theme/theme_default.tres" type="Theme" id=3]
[ext_resource path="res://default_assets/user_interface/blur_mat.tres" type="Material" id=4]

[node name="Dialogue_Menu" type="Control"]
anchor_top = 0.35
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogue_Box" type="Panel" parent="."]
material = ExtResource( 4 )
anchor_left = 0.35
anchor_top = 0.4
anchor_right = 0.95
anchor_bottom = 1.0
margin_left = 6.10352e-05
margin_top = 421.2
margin_bottom = 421.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Dialogue_Box"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -28.0
bbcode_enabled = true
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Dialogue_Box/RichTextLabel"]

[node name="Label" type="Label" parent="Dialogue_Box"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -36.0
margin_right = 157.0
margin_bottom = -2.0
text = "Press the space key to skip"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character_1" type="Control" parent="."]
anchor_left = 0.05
anchor_right = 0.3
anchor_bottom = 1.0
margin_left = 7.62939e-06
margin_top = 702.0
margin_bottom = 702.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="Character_1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = -2.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Character_1"]
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0

[node name="Name" type="Label" parent="Character_1/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Character name"
align = 1
valign = 1
clip_text = true

[node name="Character_2" type="Control" parent="."]
anchor_left = 0.7
anchor_right = 0.95
anchor_bottom = 1.0
margin_left = 0.00012207
margin_top = 702.0
margin_right = 0.00012207
margin_bottom = 702.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="Character_2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = -2.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Panel" type="Panel" parent="Character_2"]
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0

[node name="Name" type="Label" parent="Character_2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Character name"
align = 1
valign = 1
clip_text = true

[node name="Tween" type="Tween" parent="."]
